--- a/challenge03/index.html
+++ b/challenge03/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge 3</title>
@@ -9,13 +15,15 @@
   <body>
     <div class="hero">
       <div class="container">
-        <h1>Responsive layouts don’t have to be a struggle</h1>
-        <p>
+        <h1 class="roboto-black">
+          Responsive layouts don’t have to be a struggle
+        </h1>
+        <p class="roboto-regular">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
           minim veniam.
         </p>
-        <input type="button" value="I want to Learn" />
+        <input class="roboto-bold" type="button" value="I want to Learn" />
       </div>
     </div>
   </body>
