Made some changes so hero would be more responsive

--- a/challenge03/index.html
+++ b/challenge03/index.html
@@ -15,15 +15,17 @@
   <body>
     <div class="hero">
       <div class="container">
-        <h1 class="roboto-black">
-          Responsive layouts don’t have to be a struggle
-        </h1>
-        <p class="roboto-regular">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam.
-        </p>
-        <input class="roboto-bold" type="button" value="I want to Learn" />
+        <div class="hero__text">
+          <h1 class="roboto-black">
+            Responsive layouts don’t have to be a struggle
+          </h1>
+          <p class="roboto-regular">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam.
+          </p>
+          <input class="roboto-bold" type="button" value="I want to Learn" />
+        </div>
       </div>
     </div>
   </body>
