Added the content for the hero section

--- a/challenge07/index.html
+++ b/challenge07/index.html
@@ -12,5 +12,12 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="hero">
+      <div class="hero_text">
+        <p>lorem ipsum sit</p>
+        <h1>Responsive layouts don’t have to be a struggle</h1>
+      </div>
+    </div>
+  </body>
 </html>
