--- a/challenge07/index.html
+++ b/challenge07/index.html
@@ -15,9 +15,27 @@
   <body>
     <div class="hero">
       <div class="hero_text">
-        <p>lorem ipsum sit</p>
-        <h1>Responsive layouts don’t have to be a struggle</h1>
+        <p class="roboto-light">lorem ipsum sit</p>
+        <h1 class="playfair-display">
+          Responsive layouts don’t have to be a struggle
+        </h1>
       </div>
     </div>
+    <main>
+      <h2 class="playfair-display">Quality Designs</h2>
+      <div class="row">
+        <p class=".roboto-regular">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Dui
+          vivamus arcu felis bibendum ut tristique. Arcu dui vivamus arcu felis.
+          Sociis natoque penatibus et magnis dis.
+        </p>
+        <p class=".roboto-regular">
+          Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet
+          luctus venenatis. Turpis in eu mi bibendum neque egestas congue
+          quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.
+        </p>
+      </div>
+    </main>
   </body>
 </html>
