--- a/challenge07/index.html
+++ b/challenge07/index.html
@@ -30,12 +30,34 @@
           vivamus arcu felis bibendum ut tristique. Arcu dui vivamus arcu felis.
           Sociis natoque penatibus et magnis dis.
         </p>
-        <p class=".roboto-regular">
+        <p class="roboto-regular">
           Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet
           luctus venenatis. Turpis in eu mi bibendum neque egestas congue
           quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.
         </p>
       </div>
     </main>
+    <aside class="first-aside">
+      <div>
+        <h2 class="playfair-display">Made custom for you</h2>
+        <p class=".roboto-regular">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam.
+        </p>
+      </div>
+      <img src="./image-01.jpg" alt="Person on top of a mountain" />
+    </aside>
+    <aside class="second-aside">
+      <img src="./image-02.jpg" alt="Mountain ranges" />
+      <div>
+        <h2 class="playfair-display">Created with care</h2>
+        <p class="roboto-regular">
+          Felis donec et odio pellentesque diam volutpat. Aliquam purus sit amet
+          luctus venenatis. Turpis in eu mi bibendum neque egestas congue
+          quisque egestas. Pellentesque sit amet porttitor eget dolor morbi non.
+        </p>
+      </div>
+    </aside>
   </body>
 </html>
