--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="row">
+        <a class="logo" href="#">
+          <img src="img/logo.svg" alt="conquering responsive layouts" />
+        </a>
+        <button class="nav-toggle" aria-label="open navigation">
+          <span class="hamburger"></span>
+        </button>
+      </div>
+    </header>
   </body>
 </html>
