Added js for ham menu on mobile

--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -18,7 +18,11 @@
         <a class="logo" href="#">
           <img src="img/logo.svg" alt="conquering responsive layouts" />
         </a>
-        <button class="nav-toggle" aria-label="open navigation">
+        <button
+          class="nav-toggle"
+          aria-label="open navigation"
+          onclick="menuClick()"
+        >
           <span class="hamburger"></span>
         </button>
       </div>
@@ -36,5 +40,6 @@
         </ul>
       </nav>
     </header>
+    <script src="/challenge09/script.js"></script>
   </body>
 </html>
