Added hero section to mobile

--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -40,6 +40,18 @@
         </ul>
       </nav>
     </header>
+    <section class="hero">
+      <h1 class="oswald-bold">
+        Responsive layouts
+        <span class="accent">don't have to be a struggle</span>
+      </h1>
+      <p class="hero__text">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam
+        sapiente repudiandae quis corporis ut mollitia omnis at nesciunt?
+        Repellendus.
+      </p>
+      <a href="#" class="button">I want to learn</a>
+    </section>
     <script src="/challenge09/script.js"></script>
   </body>
 </html>
