Created benefits section

--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -52,6 +52,7 @@
       </p>
       <a href="#" class="button">I want to learn</a>
     </section>
+    <section class="benefits"></section>
     <script src="/challenge09/script.js"></script>
   </body>
 </html>
