Added content to benefits section and started styling

--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -52,7 +52,32 @@
       </p>
       <a href="#" class="button">I want to learn</a>
     </section>
-    <section class="benefits"></section>
+    <section class="benefits">
+      <div>
+        <h4 class="benefits__heading oswald-bold">Mobile-First</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. A enim qui
+          aliquid mollitia ex praesentium, fugiat, ab odit placeat debitis,
+          expedita cumque nobis?
+        </p>
+      </div>
+      <div>
+        <h4 class="benefits__heading oswald-bold">Efficient</h4>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat
+          excepturi veritatis similique vel aspernatur at, facilis laboriosam
+          incidunt non, enim, officia veniam hic.
+        </p>
+      </div>
+      <div>
+        <h4 class="benefits__heading oswald-bold">Done Right</h4>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+          cumque praesentium fuga quis, magni, distinctio quibusdam facere
+          tenetur laborum reprehenderit iusto doloribus animi?
+        </p>
+      </div>
+    </section>
     <script src="/challenge09/script.js"></script>
   </body>
 </html>
