Styled benefits section

--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -53,7 +53,7 @@
       <a href="#" class="button">I want to learn</a>
     </section>
     <section class="benefits">
-      <div>
+      <div class="benefit">
         <h4 class="benefits__heading oswald-bold">Mobile-First</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. A enim qui
@@ -61,7 +61,7 @@
           expedita cumque nobis?
         </p>
       </div>
-      <div>
+      <div class="benefit">
         <h4 class="benefits__heading oswald-bold">Efficient</h4>
         <p>
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat
@@ -69,7 +69,7 @@
           incidunt non, enim, officia veniam hic.
         </p>
       </div>
-      <div>
+      <div class="benefit">
         <h4 class="benefits__heading oswald-bold">Done Right</h4>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
