Added content for main

--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -78,6 +78,25 @@
         </p>
       </div>
     </section>
+    <main>
+      <section class="main__content">
+        <h2>It doesn't have to be so hard'</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. In cupiditate
+          ad quod! Ab inventore labore, itaque ducimus voluptates quaerat! Qui,
+          est velit assumenda aliquam totam laudantium facere tempora aliquid
+          laborum sint. Voluptatum aspernatur distinctio ducimus, ipsam magnam
+          est fuga rem?
+        </p>
+        <img src="/challenge09/img/the-image.jpg" alt="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aut,
+          in odio porro officiis obcaecati. Temporibus soluta ipsum odio, dolore
+          a repudiandae esse quam similique maiores, quod, id sit accusamus.
+        </p>
+      </section>
+      <aside></aside>
+    </main>
     <script src="/challenge09/script.js"></script>
   </body>
 </html>
