--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -79,16 +79,18 @@
       </div>
     </section>
     <main>
-      <section class="main__content">
-        <h2>It doesn't have to be so hard'</h2>
-        <p>
+      <section class="main__content montserrat-regular">
+        <h2 class="main__heading oswald-bold">
+          It doesn't have to be so hard'
+        </h2>
+        <p class="main__copy">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. In cupiditate
           ad quod! Ab inventore labore, itaque ducimus voluptates quaerat! Qui,
           est velit assumenda aliquam totam laudantium facere tempora aliquid
           laborum sint. Voluptatum aspernatur distinctio ducimus, ipsam magnam
           est fuga rem?
         </p>
-        <img src="/challenge09/img/the-image.jpg" alt="" />
+        <img class="main__img" src="/challenge09/img/the-image.jpg" alt="" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aut,
           in odio porro officiis obcaecati. Temporibus soluta ipsum odio, dolore
