Set up html for the aside

--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -90,14 +90,29 @@
           laborum sint. Voluptatum aspernatur distinctio ducimus, ipsam magnam
           est fuga rem?
         </p>
-        <img class="main__img" src="/challenge09/img/the-image.jpg" alt="" />
+        <img class="main__img" src="/img/the-image.jpg" alt="" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aut,
           in odio porro officiis obcaecati. Temporibus soluta ipsum odio, dolore
           a repudiandae esse quam similique maiores, quod, id sit accusamus.
         </p>
       </section>
-      <aside></aside>
+      <aside>
+        <section>
+          <div class="asside__container">
+            <h4>Break it Down</h4>
+            <p></p>
+          </div>
+          <div class="asside__container">
+            <h4>Work Your Way Up</h4>
+            <p></p>
+          </div>
+          <div class="asside__container">
+            <h4>Break it Down</h4>
+            <p></p>
+          </div>
+        </section>
+      </aside>
     </main>
     <script src="/challenge09/script.js"></script>
   </body>
