Addeds styling for teh aside section

--- a/challenge09/index.html
+++ b/challenge09/index.html
@@ -98,18 +98,30 @@
         </p>
       </section>
       <aside>
-        <section>
-          <div class="asside__container">
+        <section class="aside_section">
+          <div class="aside__container">
             <h4>Break it Down</h4>
-            <p></p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In sunt,
+              velit dolor quidem voluptate sint eligendi asperiores aliquam
+              unde?
+            </p>
           </div>
-          <div class="asside__container">
+          <div class="aside__container">
             <h4>Work Your Way Up</h4>
-            <p></p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In sunt,
+              velit dolor quidem voluptate sint eligendi asperiores aliquam
+              unde?
+            </p>
           </div>
-          <div class="asside__container">
+          <div class="aside__container">
             <h4>Break it Down</h4>
-            <p></p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. In sunt,
+              velit dolor quidem voluptate sint eligendi asperiores aliquam
+              unde?
+            </p>
           </div>
         </section>
       </aside>
